# One-Leg-Reinforcement-Learning

./: .gitignore  CMakeLists.txt  Env copy.py  Env.py  MUJOCO_LOG.TXT  Test.py  Train.py  log_data.mat  main.py
binding/: Controller.cc  Controller.hpp  EventTrigger.hpp  FSM.cc  FSM.hpp  Trajectory.cc  Trajectory.hpp  bindings copy.cc  bindings.cc
tb/PPO_1/: events.out.tfevents.1758007190.teamQuadserver.36145.0
tb/PPO_2/: events.out.tfevents.1758007230.teamQuadserver.36239.0
tb/PPO_3/: events.out.tfevents.1758007989.teamQuadserver.37122.0
xml/: base_link.STL  link1.STL  link2.STL  one_leg.xml  scene.xml
